--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<cucumber.version>6.9.0</cucumber.version>
 		<maven.compiler.version>3.8.1</maven.compiler.version>
 		<maven.surefire.version>2.22.2</maven.surefire.version>
-
+        <junit-jupiter-api>5.8.2</junit-jupiter-api>
 	</properties>
 
 	<dependencies>
@@ -33,7 +33,18 @@
 			<version>${cucumber.version}</version>
 			<scope>test</scope>
 		</dependency>
-
+		
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit-jupiter-api}</version>
+            <scope>test</scope>
+         </dependency>  
+         <dependency>
+                           <groupId>org.apache.maven.surefire</groupId>
+                           <artifactId>surefire-junit47</artifactId>
+                           <version>${maven.surefire.version}</version>
+                      </dependency>
 		<dependency>
 			<groupId>io.cucumber</groupId>
 			<artifactId>cucumber-junit</artifactId>
@@ -113,7 +124,7 @@
 					<target>${java.version}</target>
 				</configuration>
 			</plugin>
-			<plugin>
+			<!-- <plugin>
 			 <groupId>org.apache.maven.plugins</groupId>
   <artifactId>maven-failsafe-plugin</artifactId>
   <version>3.0.0-M8</version><configuration>
@@ -121,14 +132,19 @@
 						<include>**/TestRunner.java</include>
 					</includes>
 					<parallel>methods</parallel>
-					<threadCount>4</threadCount>
-					<perCoreThreadCount>true</perCoreThreadCount>
-				</configuration></plugin>
+					<useUnlimitedThreads>true</useUnlimitedThreads>
+				</configuration></plugin> -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${maven.surefire.version}</version>
-				
+				<configuration>
+					<includes>
+						<include>**/TestRunner.java</include>
+					</includes>
+					<parallel>methods</parallel>
+					<useUnlimitedThreads>true</useUnlimitedThreads>
+				</configuration>
 			</plugin>
 
 			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-failsafe-plugin</artifactId> 
